# IbProcessGuard

./: .gitignore  Cargo.toml  IbProcessGuard.sln  README.md
IbParentProcessGuard/: IbParentProcessGuard.vcxproj  Main.cpp
wait-parent/: Cargo.toml  README.md
wait-parent/examples/: single.rs
wait-parent/src/: lib.rs
