[package]
name = "wait-parent"
version = "0.1.0"
edition = "2021"
description = "Wait for the parent process to exit"
keywords = ["process", "wait", "parent"]
homepage = "https://github.com/Chaoses-Ib/IbProcessGuard"
repository = "https://github.com/Chaoses-Ib/IbProcessGuard"
authors = ["Chaoses-Ib"]
license = "MIT"

[dependencies]
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo", rev = "c491e0a23509ecfacd228352698d25b73d75342f", version = "0.33.1", default-features = false, features = ["system"]}
