[package]
name = "wait-parent"
version = "0.1.0"
edition = "2021"
description = "Wait for the parent process to exit"
keywords = ["process", "wait", "parent"]
homepage = "https://github.com/Chaoses-Ib/IbProcessGuard"
repository = "https://github.com/Chaoses-Ib/IbProcessGuard"
authors = ["Chaoses-Ib"]
license = "MIT"

[dependencies]
sysinfo = { version = "0.34", default-features = false, features = ["system"]}
